tests/baselines/reference/ambientExternalModuleInsideNonAmbientExternalModule.errors.txt
tests/cases/conformance/ambient/ambientExternalModuleInsideNonAmbientExternalModule.ts(1,1): error TS2665: 'export' modifier cannot be applied to ambient modules and module augmentations since they are always visible.
tests/cases/conformance/ambient/ambientExternalModuleInsideNonAmbientExternalModule.ts(1,23): error TS2661: Invalid module name in augmentation, module 'M' cannot be found.


==== tests/cases/conformance/ambient/ambientExternalModuleInsideNonAmbientExternalModule.ts (2 errors) ====
    export declare module "M" { }
    ~~~~~~
!!! error TS2665: 'export' modifier cannot be applied to ambient modules and module augmentations since they are always visible.
                          ~~~
!!! error TS2661: Invalid module name in augmentation, module 'M' cannot be found.